# ua-dataset-madrid

./: .gitignore  .pdm-python  LICENSE  README.md  pyproject.toml  references.bib
data/: buffered_bounds.gpkg  neighbourhoods.gpkg  population_clipped.tif
deprecated/: prepare_ped_counts.py
process/: compute.py  compute_metrics.py  counts.py  premises_lu_schema.py  prepare_ped_counts.py
