[project]
name = "paper-centrality-normalisation"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = ""},
]
dependencies = [
    "ipykernel>=6.29.3",
    "geopandas>=0.14.2",
    "pandas>=2.1.4",
    "seaborn>=0.13.2",
    "jupyterlab>=4.0.10",
    "matplotlib>=3.8.3",
    "jupyter>=1.0.0",
    "cityseer>=4.12.0",
    "scipy>=1.12.0",
    "networkx>=3.2.1",
    "rasterstats>=0.19.0",
    "rasterio>=1.3.9",
    "black>=24.3.0",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "AGPL-3.0" }

[tool.pdm]
distribution = false
