[project]
name = "madrid-ua-dataset"
version = "0.4.0"
description = "Default template for PDM package"
authors = [{ name = "", email = "" }]
dependencies = [
    "ipykernel>=6.29.3",
    "geopandas>=0.14.2",
    "pandas>=2.1.4",
    "seaborn>=0.13.2",
    "jupyterlab>=4.0.10",
    "matplotlib>=3.8.3",
    "jupyter>=1.0.0",
    "cityseer>=4.15.2",
    "scipy>=1.12.0",
    "networkx>=3.2.1",
    "rasterstats>=0.19.0",
    "rasterio>=1.3.9",
    "numpy<2.0.0",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "AGPL-3.0" }

[tool.uv]
dev-dependencies = ["ruff>=0.6.5"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
