[project]
name = "ua-dataset-madrid"
version = "0.7.0"
description = "Default template for PDM package"
authors = [{ name = "", email = "" }]
dependencies = [
    "cityseer>=4.18.1",
    "geopandas>=1.0.1",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.1",
    "networkx>=3.4.2",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "rasterio>=1.4.3",
    "rasterstats>=0.20.0",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = { text = "AGPL-3.0" }

[tool.uv]
dev-dependencies = ["ruff>=0.6.5"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
